--- a/index.html
+++ b/index.html
@@ -397,16 +397,13 @@
     </div>
     <!-- 🟡 CTA Button (Centered + Enhanced) -->
     <div class="flex justify-center mt-6">
-        <a href="https://api.leadconnectorhq.com/widget/form/ugRWgZyGNmk4kFNN80Ml" target="_blank"
-            rel="noopener noreferrer">
+        <a href="/book-a-demo" rel="noopener noreferrer">
             <button
                 class="bg-[#ffcd30] text-white text-base font-semibold animate-bounce px-8 py-3 rounded-full shadow-lg hover:bg-[#e6b800] hover:scale-105 transition-all duration-300">
                 Book a Demo
             </button>
-                </a>
+              </a>
     </div>
-
-
 
     </section>
 
@@ -2224,72 +2221,72 @@
     </style>
 
     </div>
-   <!-- Embedded Footer -->
-<div class="mt-16 w-full flex flex-col items-center justify-center">
-  <footer class="text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl">
-    <div class="flex flex-col items-center justify-center text-center gap-4">
+    <!-- Embedded Footer -->
+    <div class="mt-16 w-full flex flex-col items-center justify-center">
+        <footer class="text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl">
+            <div class="flex flex-col items-center justify-center text-center gap-4">
 
-      <!-- Social + Email Icons -->
-      <div class="flex flex-wrap items-center justify-center gap-6">
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
-          rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-2a1 1 0 100 2 1 1 0 000-2z" />
-          </svg>
-        </a>
+                <!-- Social + Email Icons -->
+                <div class="flex flex-wrap items-center justify-center gap-6">
+                    <!-- Instagram -->
+                    <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
+                        rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-2a1 1 0 100 2 1 1 0 000-2z" />
+                        </svg>
+                    </a>
 
-        <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank" rel="noopener noreferrer"
-          class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
-          </svg>
-        </a>
+                    <!-- LinkedIn -->
+                    <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank"
+                        rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                        </svg>
+                    </a>
 
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/mirajocollective" target="_blank" rel="noopener noreferrer"
-          class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M22.675 0H1.326C.593 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.326 24H12.82v-9.294H9.692V11.13h3.127V8.41c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.796.143v3.24l-1.919.001c-1.504 0-1.796.715-1.796 1.763v2.312h3.587l-.467 3.576h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0z" />
-          </svg>
-        </a>
+                    <!-- Facebook -->
+                    <a href="https://www.facebook.com/mirajocollective" target="_blank" rel="noopener noreferrer"
+                        class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M22.675 0H1.326C.593 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.326 24H12.82v-9.294H9.692V11.13h3.127V8.41c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.796.143v3.24l-1.919.001c-1.504 0-1.796.715-1.796 1.763v2.312h3.587l-.467 3.576h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0z" />
+                        </svg>
+                    </a>
 
-        <!-- WhatsApp -->
-        <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
-          class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
-          </svg>
-        </a>
+                    <!-- WhatsApp -->
+                    <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
+                        class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
+                        </svg>
+                    </a>
 
-        <!-- Email -->
-        <a href="mailto:hello@ai.mirajoco.org" class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M2 4a2 2 0 012-2h16a2 2 0 012 2v1.2l-10 6.25L2 5.2V4zm0 3.8v12.2a2 2 0 002 2h16a2 2 0 002-2V7.8l-10 6.25L2 7.8z" />
-          </svg>
-        </a>
-      </div>
+                    <!-- Email -->
+                    <a href="mailto:hello@ai.mirajoco.org" class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M2 4a2 2 0 012-2h16a2 2 0 012 2v1.2l-10 6.25L2 5.2V4zm0 3.8v12.2a2 2 0 002 2h16a2 2 0 002-2V7.8l-10 6.25L2 7.8z" />
+                        </svg>
+                    </a>
+                </div>
 
-      <!-- Centered Privacy & Terms -->
-      <div class="flex items-center justify-center gap-4 text-sm font-medium mt-4">
-        <a href="/privacy" class="text-[#1a767f] hover:underline transition">Privacy Policy</a>
-        <span class="text-gray-400">|</span>
-        <a href="/terms" class="text-[#1a767f] hover:underline transition">Terms of Service</a>
-      </div>
+                <!-- Centered Privacy & Terms -->
+                <div class="flex items-center justify-center gap-4 text-sm font-medium mt-4">
+                    <a href="/privacy" class="text-[#1a767f] hover:underline transition">Privacy Policy</a>
+                    <span class="text-gray-400">|</span>
+                    <a href="/terms" class="text-[#1a767f] hover:underline transition">Terms of Service</a>
+                </div>
 
-      <!-- Copyright -->
-      <div class="text-sm text-gray-500 mt-2">
-        &copy; 2025 Mirajo Collective. All rights reserved.
-      </div>
+                <!-- Copyright -->
+                <div class="text-sm text-gray-500 mt-2">
+                    &copy; 2025 Mirajo Collective. All rights reserved.
+                </div>
+            </div>
+        </footer>
     </div>
-  </footer>
-</div>
 
     </section>
 </body>
