--- a/index.html
+++ b/index.html
@@ -2199,7 +2199,8 @@
             });
         });
     </script>
-
+    <script
+        type="text/javascript"> (function () { var t = document.createElement("script"); t.type = "text/javascript", t.async = !0, t.src = 'https://assistant.mirajo.ai/js/am.js', t.onload = t.onreadystatechange = function () { var t = this.readyState; if (!t || "complete" == t || "loaded" == t) try { affiliateManager.init('T0jFk6w1vdxZT2k03Bsg', 'https://backend.leadconnectorhq.com', '.www.mirajo.ai') } catch (t) { } }; var e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(t, e) })(); </script>
     <style>
         @keyframes blinkCursor {
 
@@ -2229,22 +2230,22 @@
                 <!-- Social + Email Icons -->
                 <div class="flex flex-wrap items-center justify-center gap-6">
                     <!-- Instagram -->
-                     <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
-                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                        <path
-                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
-                    </svg>
-                </a>
+                    <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
+                        rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                        </svg>
+                    </a>
 
-                <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
-                    class="hover:text-[#1a767f] transition">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                        <path
-                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
-                    </svg>
-                </a>
+                    <!-- LinkedIn -->
+                    <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
+                        class="hover:text-[#1a767f] transition">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                        </svg>
+                    </a>
 
                     <!-- Facebook -->
                     <a href="https://www.facebook.com/mirajocollective" target="_blank" rel="noopener noreferrer"
