--- a/pricing/index.html
+++ b/pricing/index.html
@@ -297,7 +297,7 @@
           <div>Dedicated Account Manager</div>
         </div>
       </div>
-      <a href="#"
+      <a href="https://www.mirajo.ai/book-a-demo"
          class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">Contact Sales</a>
     </div>
   </div>
