--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
                 <a href="/pricing" class="hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
                 <a href="https://home.mirajoco.org/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
                     Collective</a>
-                <a href="https://app.mirajo.ai/" target="_blank"
-                    class="hover:text-[#1a767f] transition-colors duration-200">Client Login</a>
+                <a href="https://app.mirajo.ai/" class="hover:text-[#1a767f] transition-colors duration-200">Client
+                    Login</a>
+                <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
+
             </nav>
 
             <!-- Mobile Toggle -->
@@ -146,6 +148,8 @@
                 <a href="https://login.mirajoagency.org/" target="_blank"
                     class="block hover:text-[#1a767f] transition">Client Login</a>
                 <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
+                <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
+
             </div>
 
     </header>
