--- a/pricing/index.html
+++ b/pricing/index.html
@@ -79,6 +79,8 @@
         <a href="/" class="hover:text-[var(--brand-teal)] transition">Home</a>
         <a href="https://home.mirajoco.org/" class="hover:text-[var(--brand-teal)] transition">MiRAjO Collective</a>
         <a href="https://app.mirajo.ai/" class="hover:text-[var(--brand-teal)] transition">Client Login</a>
+           <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
+  
       </nav>
       <button id="menu-toggle" class="md:hidden text-gray-700 focus:outline-none" aria-label="Open menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
@@ -89,8 +91,11 @@
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
       <a href="/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
+    
       <a href="https://home.mirajoco.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">MiRAjO Collective</a>
       <a href="https://login.mirajoagency.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">Client Login</a>
+         <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
+  
     </div>
   </header>
 
